add homepage for all wps schools, renamed first signin page to room name

--- a/index.html
+++ b/index.html
@@ -1,22 +1,15 @@
 <html>
-<head>
-</head>
-<body>
-  <div id='menu-buttons'>
-    <button class='button in inactive'>Sign In</button> 
-      <!-- opens menu where student can type their id # 
-      and input any other information that will be stored. -->
+  <head>
+  </head>
+  <body>
+    Wethersfield Public Schools<br>
+    Sign In Homepage<br>
 
-    <button class='button out inactive'>Sign Out</button>
-    <!-- prompts student to click on their name (li element)
-    opens menu where student can input any other information 
-    that will be stored. -->
-  </div>
-
-  <ul id='students'>
-    <li id='123'> STUDENT INFORMATION GOES HERE </li>
-    <li id='456'> STUDENT INFORMATION GOES HERE </li>
-  </ul>
-
-</body>
+    <li>
+      <ul>WHS Media Center</ul>
+      <ul>SDMS Mac Lab</ul>
+      <ul>SDMS Media Center</ul>
+    </li>
+    
+  </body>
 </html>
