client side able to receive student id numbers

--- a/public/sdms-maclab.html
+++ b/public/sdms-maclab.html
@@ -20,7 +20,7 @@
   <div class='menu in inactive'>
     Student ID: <input id='sid' type='text'>
     Computer #: <input id='num' type='number' min='1' max='31'>
-    <button class='button in submit' onclick='getStudent()'>Submit</button>
+    <button class='button in submit' onclick='signin()'>Submit</button>
   </div>
 
   <div class='menu out inactive'>
