support sign in with correct id

--- a/public/sdms-maclab.html
+++ b/public/sdms-maclab.html
@@ -5,7 +5,7 @@
   <script type='text/javascript' src="./query.js"></script>
   <script type='text/javascript' src="./submit.js"></script>
 </head>
-<body id='sdms-maclab'>
+<body id='sdms_maclab'>
   <div id='menu-buttons'>
     <button class='button in inactive' onclick='openIn()'>Sign In</button> 
       <!-- opens menu where student can type their id # 
