get rid of some typos and some debugging stuff i dont need anymore

--- a/public/sdms-maclab.html
+++ b/public/sdms-maclab.html
@@ -25,7 +25,7 @@
 
   <div class='menu out inactive'>
     Select your name from the list below, then click Submit.
-    <button class='button out submit' onclick='signOut()'>Submit</button>
+    <button class='button out submit' onclick='signout()'>Submit</button>
 
   </div>
 
