--- a/template.html
+++ b/template.html
@@ -18,13 +18,13 @@
     opens menu where student can input any other information 
     that will be stored. -->
   <div class='menu in active' id="in-menu">
-    Student ID: <input id='sid' type='text'>
-    <button class='button in submit' onclick='signin()'>Submit</button>
+    Student ID: <input id='sid' pattern="[0-9]*" type='text'>
+    <button class='button in submit active' onclick='signin()'>Submit</button>
   </div>
 
   <div class='menu out' id="out-menu">
     Select your name from the list below, then click Submit.
-    <button class='button out submit' onclick='signout()'>Submit</button>
+    <button class='button out submit active' onclick='signout()'>Submit</button>
 
   </div>
   </div>
