implement signout button for ipad use, but enter also works

--- a/template.html
+++ b/template.html
@@ -16,7 +16,7 @@
     <button class='button out' id="toggle-out" onclick='toggleMenus()'>Sign Out</button> -->
     <div class='id-field' id="in-menu">
       Student ID: <input id='sid' pattern="[0-9]*" type='text'>
-      <button class='button in submit active' onclick='signin()'>Submit</button>
+      <button class='button in' id='submit-in' onclick='signin()'>Submit</button>
     </div>
 
     <!--<div class='menu out' id="out-menu">
@@ -25,9 +25,10 @@
     </div>-->
   </div>
 
-
+ 
 
   <ul id='students'>
+
   </ul>
 
 </body>
