--- a/template.html
+++ b/template.html
@@ -9,24 +9,14 @@
 </head>
 <body id='##TEMPLATE##'>
   <div id='top-bar'>
-    <button class='button instructions' id="instructions" onclick="showInstructions()">Instructions</button>
 
-    <!--<button class='button in active' id="toggle-in" onclick='toggleMenus()
-
-    <button class='button out' id="toggle-out" onclick='toggleMenus()'>Sign Out</button> -->
     <div class='id-field' id="in-menu">
       Student ID: <input id='sid' pattern="[0-9]*" type='text'>
-      <button class='button in' id='submit-in' onclick='signin()'>Submit</button>
+      <button class='button in' id='submit-in' onclick='signin()'>Submit</button>     
     </div>
 
-    <!--<div class='menu out' id="out-menu">
-      Select your name from the list below, then click Submit.
-      <button class='button out submit active' onclick='signout()'>Submit</button>
-    </div>-->
-  </div>
-
- 
-
+     <div id='in-instructions' class='instructions'>Scan or type your Student ID to sign in. Click on your name to sign out.</div>
+  </div> 
   <ul id='students'>
 
   </ul>
