add debug buttons

--- a/template.html
+++ b/template.html
@@ -22,4 +22,6 @@
   </ul>
 
 </body>
+<button class='debug' onclick='socket.emit("ping")'>ping</button>
+<button class='debug debug-2' onclick='alert("debug")'>debug</button>
 </html>
