--- a/template.html
+++ b/template.html
@@ -6,6 +6,7 @@
   <script type='text/javascript' src="./submit.js"></script>
   <script type='text/javascript' src="./style.js"></script>
   <link rel="stylesheet" type="text/css" href="./style.css">
+  <script type='text/javascript' src='##MODE##'></script>
 </head>
 <body id='##TEMPLATE##'>
   <div id='top-bar'>
